<resources>
    <string name="app_name">AizuNavi</string>

    <string name="hello_world">Hello world!</string>
    <string name="marker_settings">Marker Settings</string>

    <string name="welcome">あいずなびに、ようこそ</string>

    <string name="set_dest">経路を検索</string>
    <string name="get_description">説明を聞く</string>

    <string name="title">タイトル</string>
    <string name="description">説明</string>
    <string name="setting">更新</string>
    <string name="delete">削除</string>

    <string name="unable_current_location">現在位置が利用出来ません</string>

    <string name="success_gps_service">位置情報サービスの接続に成功しました</string>
    <string name="error_gps_service">位置情報サービスの接続に失敗しました</string>
    <string name="suspended_gps_service">位置情報サービスの接続が切断されました</string>

    <string name="error_bus_stop">バス停の取得に失敗しました</string>
    <string name="error_spot">施設の取得に失敗しました</string>
    <string name="error_histrical_spot">史跡の取得に失敗しました</string>
    <string name="reload">アプリを再起動してください</string>

    <string name="error_tts">テキストの再生に失敗しました</string>

    <string name="add_new_marker">新規マーカーを設置しました</string>

    <string name="nothing_map">標準の地図アプリが存在しないためご利用出来ません</string>
</resources>
