<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- コンテンツ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- タイトル -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:text="@string/marker_settings"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <!--マーカータイトル-->
        <EditText
            android:id="@+id/marker_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:inputType="text"
            android:hint="@string/title"/>

        <!--マーカー説明-->
        <EditText
            android:id="@+id/marker_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:inputType="textMultiLine"
            android:maxLength="90"
            android:hint="@string/description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- DELETE ボタン -->
            <Button
                android:id="@+id/negative_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="8dp"
                android:paddingRight="18dp"
                android:paddingLeft="18dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/bt_dialog_positive"
                android:text="@string/delete"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

            <!-- OK ボタン -->
            <Button
                android:id="@+id/positive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:paddingRight="18dp"
                android:paddingLeft="18dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/bt_dialog_positive"
                android:text="@string/setting"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Close ボタン -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bt_dialog_close"
        android:text="×"
        android:textColor="@color/primary_indigo"
        />

</RelativeLayout>